--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
   "prometheus_client>=0.20.0",
   "eth-account>=0.11.0",
   "hyperliquid-python-sdk>=0.18.0",
+  "fastapi>=0.110.0",
+  "uvicorn>=0.29.0",
 ]
 
 [project.optional-dependencies]
